--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,12 +69,15 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // KTX for viewModels()
-    implementation "androidx.activity:activity-ktx:1.3.0"
+    implementation "androidx.activity:activity-ktx:1.3.1"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
+    //Scalable size unit
+    implementation "com.intuit.sdp:sdp-android:1.0.6"
+    implementation "com.intuit.ssp:ssp-android:1.0.6"
 
 
 }
